2010-01-29  Pablo de la Concepción <pablo.concepcion@artica.es>

	* operation/gis_maps/render_view.php: Fixed call to get_agent_names to
	get the names in the same case as they are in the DB.

	* operation/agentes/gis_view.php: Changed size of the map to be relative

	* include/functions_gis.php: Fixed the call to addPoint in getAgentMap
	to use the new parameters.

2010-01-29 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/map_builder.php: use "clean_cache" in the deleting of
	visual map.

2010-01-28 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/gis_maps/render_view.php: add the check if there aren't any
	connection to map.
	
	* operation/menu.php: change parameter "id" to "id_map". 

2010-01-28 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: add function "deleteMap" for to delete the map
	and other rows in tables related.
	
	* godmode/gis_maps/index.php: use the "deleteMap" in link of delete map.
	
	* include/functions_db.php: add function "clean_cache" for clean the
	problematic (sometimes) cache.

2010-01-27 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/gis_maps/ajax.php: clean source code, erased comment lines.
	
	* include/functions_gis.php, godmode/gis_maps/configure_gis_map.php: clean
	source, change the name of saveMap2 to saveMap.

2010-01-27  Pablo de la Concepción <pablo.concepcion@artica.es>

	* include/functions_gis.php: Modiffied addPoint and addPointExtent to 
	receive more parmeters so it's possible to use any kind of point.
	Modified comments on saveMap2

	* operation/gis_maps/render_view.php: Used map_id instead if id when 
	the parameter passed in the url is a map id.
	Fixed to work with the new function getMapConf.
	Improved "pure" view. Still some things are hardcoded and needs improvement

	* operation/gis_maps/ajax.php: Modified to suppor calls to get info of 
	different kind of points. Removed hardcoded data.

	* operation/gis_maps/index.php:  Used map_id instead if id when